# Coding

./: .gitignore  git.md  package-lock.json
Apps/Geometry Dash Voice Mod/: main.py  noise_trigger_cfg.json
AshVeil2D/: game.py
C/: main
FrontEnd/: README.md
JewOS/: .gitignore  Cargo.toml  README.md  build.sh
ML/: README.md  README.md.bak
MatrixDE/: README.md
Polski/: Danse macbre.md
Portfolio/: package-lock.json
Python/: README.md
Russet/: boot.asm  final_os.img  i686-unknown-none.json  kernel.c  kernel.tmp  linker.ld
Rust/: README.md  Reverse-Shell.rs
TechniCasino/: .env.example  .gitignore  .md  .npmrc  PROGRESS.md  README.md  docker-compose.yml  index.html  package.json  style.css
TechniCasino/apps/api/: Cargo.toml
TechniCasino/apps/api/src/: config.rs  error.rs  main.rs  state.rs
TechniCasino/apps/api/src/db/: pool.rs
TechniCasino/apps/api/src/db/migrations/: 001_init.sql
TechniCasino/apps/api/src/games/: blackjack.rs  chicken_road.rs  mines.rs  poker.rs  roulette.rs  slots.rs
TechniCasino/apps/api/src/middleware/: auth.rs
TechniCasino/apps/api/src/models/: game_session.rs  user.rs  wallet.rs
TechniCasino/apps/api/src/routes/: auth.rs  game.rs  mod.rs  wallet.rs
TechniCasino/apps/api/src/services/: auth.rs  provably_fair.rs  wallet.rs
TechniCasino/apps/api/src/utils/: hash.rs  jwt.rs
TerminalChatApp/: Makefile
myrpg/: camera.lua  combat.lua  conf.lua  dialogue.lua  enemy.lua  main.lua  map.lua  npc.lua  player.lua  ui.lua
tmp/: ChemiaSciaga.html  SI-Project.md  biologia.html  sciagaNaBiologie.html  sciaga_skora.html
(+269 files in other folders)
